# cc-index

./: CMakeLists.txt  config.h.in
include/: index.h  make_ast_consumer.h  make_frontend_action.h
lib/: index.cc  make_ast_consumer.cc  make_frontend_action.cc
src/: main.cc
